--- a/front-end/index.html
+++ b/front-end/index.html
@@ -77,9 +77,8 @@ https://templatemo.com/tm-591-villa-agency
                     <ul class="nav">
                       <li><a href="index.html" class="active">가게등록</a></li>
                       <li><a href="properties.html">가게 물품 관리</a></li>
-                      <li><a href="property-details.html">등록한 물품</a></li>
-                      <li><a href="contact.html">로그인</a></li>
-                      <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
+                      <li><a href="login.html">로그인</a></li>
+                      <li><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
