전체적인 ui 틀 구성완료

--- a/front-end/map.html
+++ b/front-end/map.html
@@ -53,12 +53,12 @@ https://templatemo.com/tm-591-villa-agency
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <h1>맡아다오오</h1>
+                        <h1>Offload</h1>
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="index.html" class="active">가게등록</a></li>
+                      <li><a href="storeResister.html">가게등록</a></li>
                       <li><a href="properties.html">가게 물품 관리</a></li>
                       <li><a href="login.html">로그인</a></li>
                       <li><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
