--- a/front-end/property-details.html
+++ b/front-end/property-details.html
@@ -51,12 +51,12 @@ https://templatemo.com/tm-591-villa-agency
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <h1>맡아주오오</h1>
+                        <h1>Offload</h1>
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="index.html" class="active">가게등록</a></li>
+                      <li><a href="storeResister.html">가게등록</a></li>
                       <li><a href="properties.html">가게 물품 관리</a></li>
                       <li><a href="login.html">로그인</a></li>
                       <li><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
@@ -76,8 +76,8 @@ https://templatemo.com/tm-591-villa-agency
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <span class="breadcrumb"><a href="#">Home</a>  /  Single Property</span>
-          <h3>Single Property</h3>
+          <span class="breadcrumb"><a href="#">registered goods</a></span>
+          <h3>등록한 물품</h3>
         </div>
       </div>
     </div>
