--- a/front-end/storeResister.html
+++ b/front-end/storeResister.html
@@ -26,27 +26,6 @@ TemplateMo 591 villa agency
 https://templatemo.com/tm-591-villa-agency
 
 -->
-<style>
-  .start-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: orange;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    margin-top: 35px;  /* 버튼을 위의 텍스트로부터 20px 아래로 이동 */
-}
-
-.start-button:hover {
-    background-color: darkorange;
-}
-
-  </style>
-
   </head>
 
 <body>
@@ -77,10 +56,10 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="storeResister.html">가게등록</a></li>
-                      <li><a href="properties.html">가게 물품 관리</a></li>
-                      <li><a href="login.html">로그인</a></li>
-                      <li><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
+                        <li><a href="storeResister.html">가게등록</a></li>
+                        <li><a href="properties.html">가게 물품 관리</a></li>
+                        <li><a href="login.html">로그인</a></li>
+                        <li><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -93,21 +72,66 @@ https://templatemo.com/tm-591-villa-agency
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <div class="main-banner">
-    <div class="owl-carousel owl-banner">
-      <div class="item item-1">
-        <div class="header-text">
-          <span class="category">당신의 물건, <em>보관하세요</em></span>
-          <h2>어디에서나!<br>여러분의 짐을 보관하세요!</h2>
-          <a href="map.html" class="start-button">시작하기</a>
+  <div class="page-heading header-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <span class="breadcrumb"><a href="#">
+            Contact store</a></span>
+          <h3>가게 등록</h3>
         </div>
       </div>
     </div>
   </div>
+  
+  <div class="contact-page section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+          <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1642869952544!5m2!1sen!2sth" width="100%" height="500px" frameborder="0" style="border:0; border-radius: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);" allowfullscreen=""></iframe>
+          </div>
 
- 
+        </div>
+        <div class="col-lg-5">
+          <form id="contact-form" action="" method="post">
+            <div class="row">
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="name">가게이름</label>
+                  <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="email">가게주소</label>
+                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="subject">전화번호</label>
+                  <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="message">Message</label>
+                  <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                </fieldset>
+              </div>
+              <div class="col-lg-12">
+                <fieldset>
+                  <button type="submit" id="form-submit" class="orange-button">가게 등록하기</button>
+                </fieldset>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 
-
+</div>
   <footer>
     <div class="container">
       <div class="col-lg-8">
