--- a/front-end/register.html
+++ b/front-end/register.html
@@ -171,6 +171,7 @@ https://templatemo.com/tm-591-villa-agency
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="assets/js/register.js"></script>
 
   </body>
 </html>
