--- a/front-end/storeResister.html
+++ b/front-end/storeResister.html
@@ -105,13 +105,20 @@ https://templatemo.com/tm-591-villa-agency
               <div class="col-lg-12">
                 <fieldset>
                   <label for="email">가게주소</label>
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+                  <input type="text" name="addr" id="addr" placeholder="Your E-mail..." required>
+
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="subject">전화번호</label>
                   <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+                </fieldset>
+              </div class="col-lg-12">
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="email">가게사진</label>
+                  <input type="file" name="photo" accept="image/*" id="image">
                 </fieldset>
               </div>
               <div class="col-lg-12">
@@ -122,7 +129,7 @@ https://templatemo.com/tm-591-villa-agency
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="orange-button">가게 등록하기</button>
+                  <button type="submit" id="createStoreButton" class="orange-button">가게 등록하기</button>
                 </fieldset>
               </div>
             </div>
@@ -150,6 +157,7 @@ https://templatemo.com/tm-591-villa-agency
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="assets/js/register.js"></script>
 
   </body>
 </html>
