✅ 회원가입, 로그인 기능 구현 완료

--- a/front-end/property-details.html
+++ b/front-end/property-details.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="assets/css/dropdown.css" />
 <!--
 
 TemplateMo 591 villa agency
@@ -54,12 +55,19 @@ https://templatemo.com/tm-591-villa-agency
                         <h1>Offload</h1>
                     </a>
                     <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
                     <ul class="nav">
+                      <li><a href="map.html">지도</a></li>
                       <li><a href="storeResister.html">가게등록</a></li>
                       <li><a href="properties.html">가게 물품 관리</a></li>
-                      <li><a href="login.html">로그인</a></li>
-                      <li><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
+                      <li id="loginMenuItem">
+                        <a href="#" id="loginMenu">로그인</a>
+                        <div class="dropdown-content" id="dropdownContent">
+                            <a href="#" id="logoutAction">로그아웃</a>
+                        </div>
+                    </li>
+                    
+                      <li id="registeredItem"><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
+
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -289,6 +297,39 @@ https://templatemo.com/tm-591-villa-agency
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script>
+document.addEventListener("DOMContentLoaded", function() {
+    const userId = localStorage.getItem('email');
+    const loginMenuItem = document.getElementById('loginMenuItem');
+    const loginMenu = document.getElementById('loginMenu');
+    const dropdownContent = document.getElementById('dropdownContent');
+    const logoutAction = document.getElementById('logoutAction');
+    const registeredItem = document.getElementById('registeredItem'); // 추가한 부분
 
+    if (userId) {
+        // 로그인 상태일 경우
+        loginMenu.textContent = userId; // 사용자의 userid로 텍스트 변경
+        registeredItem.style.display = 'block'; // 등록한 물품 메뉴 항목 보이기 - 추가한 부분
+
+        logoutAction.addEventListener('click', function(event) {
+            event.preventDefault();
+            // 로그아웃 처리
+            localStorage.removeItem('token');
+            localStorage.removeItem('email');
+            // 페이지를 새로 고침하여 메뉴를 업데이트합니다.
+            location.reload();
+        });
+    } else {
+        // 로그아웃 상태일 경우
+        loginMenu.textContent = "로그인";
+        dropdownContent.style.display = "none"; // 드롭다운 메뉴 숨기기
+        registeredItem.style.display = 'none'; // 등록한 물품 메뉴 항목 숨기기 - 추가한 부분
+        loginMenuItem.addEventListener('click', function() {
+            window.location.href = 'login.html';
+        });
+    }
+});
+
+      </script>
   </body>
 </html>
