✅ 지도 업데이트 및 가게등록 지도 표시

--- a/front-end/map.html
+++ b/front-end/map.html
@@ -81,13 +81,12 @@ https://templatemo.com/tm-591-villa-agency
     </div>
   </header>
   <!-- ***** Header Area End ***** -->
-
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=73d7b4df5db725a005c3a88893e7b040&libraries=services"></script>
   <div class="container-fluid" style="padding: 0;"> <!-- container-fluid 사용하여 패딩 제거 -->
     <div class="row" style="margin: 0;"> <!-- 마진 제거 -->
         <div id="map"></div>
     </div>
 </div>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=73d7b4df5db725a005c3a88893e7b040"></script>
 <script src="app.js"></script>
 
 
