--- a/front-end/storeResister.html
+++ b/front-end/storeResister.html
@@ -97,13 +97,20 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-7">
           <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1642869952544!5m2!1sen!2sth" width="100%" height="500px" frameborder="0" style="border:0; border-radius: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);" allowfullscreen=""></iframe>
+            <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=73d7b4df5db725a005c3a88893e7b040&libraries=services"></script>
+            <div id="storeMap">10</div>
           </div>
 
         </div>
         <div class="col-lg-5">
           <form id="contact-form" action="" method="post">
             <div class="row">
+              <div class="col-lg-12">
+                <fieldset>
+                  <label for="message">Message</label>
+                  <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                </fieldset>
+              </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="name">가게이름</label>
@@ -120,12 +127,6 @@ https://templatemo.com/tm-591-villa-agency
                 <fieldset>
                   <label for="subject">전화번호</label>
                   <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
-                </fieldset>
-              </div>
-              <div class="col-lg-12">
-                <fieldset>
-                  <label for="message">Message</label>
-                  <textarea name="message" id="message" placeholder="Your Message"></textarea>
                 </fieldset>
               </div>
               <div class="col-lg-12">
@@ -158,6 +159,7 @@ https://templatemo.com/tm-591-villa-agency
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="storeMap.js"></script> <!-- s-->
   <script>
 document.addEventListener("DOMContentLoaded", function() {
     const userId = localStorage.getItem('email');
