saller와 user 의 입장에서의 등록 물품에대한 로직 구현완료

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -78,16 +78,16 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="map.html">지도</a></li>
-                      <li><a href="storeResister.html">가게등록</a></li>
-                      <li><a href="properties.html">가게 물품 관리</a></li>
+                      <li id="storeRegisterItem"><a href="storeResister.html">가게등록</a></li> <!-- id 추가 -->
+                      <li id="storeManageItem"><a href="store_management.html">가게 물품 관리</a></li> <!-- id 추가 -->
                       <li id="loginMenuItem">
-                        <a href="#" id="loginMenu">로그인</a>
-                        <div class="dropdown-content" id="dropdownContent">
-                            <a href="#" id="logoutAction">로그아웃</a>
+                          <a href="#" id="loginMenu">로그인</a>
+                          <div class="dropdown-content" id="dropdownContent">
+                              <a href="#" id="logoutAction">로그아웃</a>
                         </div>
                     </li>
                     
-                    <li id="registeredItem"><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
+                    <li id="registeredItem"><a href="resister_goods.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
 
                   </ul>   
                     <a class='menu-trigger'>
@@ -123,38 +123,47 @@ https://templatemo.com/tm-591-villa-agency
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
   <script>
+    
 document.addEventListener("DOMContentLoaded", function() {
-    const userId = localStorage.getItem('email');
+    const userId = sessionStorage.getItem('email');
+    const userRole = sessionStorage.getItem('role');
     const loginMenuItem = document.getElementById('loginMenuItem');
     const loginMenu = document.getElementById('loginMenu');
     const dropdownContent = document.getElementById('dropdownContent');
     const logoutAction = document.getElementById('logoutAction');
-    const registeredItem = document.getElementById('registeredItem'); // 추가한 부분
+    const storeRegisterItem = document.getElementById('storeRegisterItem'); // 가게등록 항목
+    const storeManageItem = document.getElementById('storeManageItem'); // 가게 물품 관리 항목
 
     if (userId) {
-        // 로그인 상태일 경우
-        loginMenu.textContent = userId; // 사용자의 userid로 텍스트 변경
-        registeredItem.style.display = 'block'; // 등록한 물품 메뉴 항목 보이기 - 추가한 부분
+        loginMenu.textContent = userId;
+        registeredItem.style.display = 'block'; // 로그인 한 경우 등록한 물품 항목 보이기
+
+        if (userRole === 'saller') {
+            storeRegisterItem.style.display = 'block';
+            storeManageItem.style.display = 'block';
+        } else if (userRole === 'user') {
+            storeRegisterItem.style.display = 'none';
+            storeManageItem.style.display = 'none';
+        }
 
         logoutAction.addEventListener('click', function(event) {
             event.preventDefault();
-            // 로그아웃 처리
-            localStorage.removeItem('token');
-            localStorage.removeItem('email');
-            // 페이지를 새로 고침하여 메뉴를 업데이트합니다.
+            sessionStorage.removeItem('token');    // 수정된 부분
+            sessionStorage.removeItem('email');   // 수정된 부분
+            sessionStorage.removeItem('role');    // 수정된 부분
             location.reload();
         });
     } else {
-        // 로그아웃 상태일 경우
         loginMenu.textContent = "로그인";
-        dropdownContent.style.display = "none"; // 드롭다운 메뉴 숨기기
-        registeredItem.style.display = 'none'; // 등록한 물품 메뉴 항목 숨기기 - 추가한 부분
+        dropdownContent.style.display = "none";
+        storeRegisterItem.style.display = 'none'; 
+        storeManageItem.style.display = 'none'; 
+        registeredItem.style.display = 'none'; // 로그아웃 한 경우 등록한 물품 항목 숨기기
         loginMenuItem.addEventListener('click', function() {
             window.location.href = 'login.html';
         });
     }
 });
-
 
       </script>
   </body>
