--- a/front-end/login.html
+++ b/front-end/login.html
@@ -63,11 +63,8 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li><a href="map.html">지도</a></li>
-                        <li><a href="storeResister.html">가게등록</a></li>
-                        <li><a href="properties.html">가게 물품 관리</a></li>
-     
                       
-                        <li id="registeredItem"><a href="property-details.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
+                        <li id="registeredItem"><a href="resister_goods.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
 
                     </ul>  
                     <a class='menu-trigger'>
