--- a/front-end/itemRegistration.html
+++ b/front-end/itemRegistration.html
@@ -86,27 +86,19 @@ https://templatemo.com/tm-591-villa-agency
         <div class="col-lg-12">
           <span class="breadcrumb"><a href="#">
             Contact store</a></span>
-          <h3>가게 등록</h3>
+          <h3>물품 등록</h3>
         </div>
       </div>
     </div>
   </div>
   
-  <div class="contact-page section">
+  <div class="contact-page section"style="display: flex; justify-content: center;" >
     <div class="container">
-      <div class="row">
-        <div class="col-lg-7">
-          <div id="map">
-            <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=73d7b4df5db725a005c3a88893e7b040&libraries=services"></script>
-            <div id="storeMap"style="border:0; border-radius: 10px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);"></div>
-          </div>
-        </div>
         <div class="col-lg-5">
           <form id="contact-form" action="" method="post">
-            <div class="row">
               <div class="col-lg-12">
                 <fieldset style="display: flex; justify-content: space-between;">
-                  <label for="imageUpload">가게 이미지</label>
+                  <label for="imageUpload">물품 이미지</label>
                   <button type="button" id="uploadButton">이미지 첨부하기</button>
                   <input type="file" name="image" id="imageUpload" accept="image/*" style="display: none;" >
                 </fieldset>
@@ -114,13 +106,13 @@ https://templatemo.com/tm-591-villa-agency
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <label for="name">가게이름</label>
+                  <label for="name">물품 이름</label>
                   <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <label for="email">가게주소</label>
+                  <label for="email">전화번호</label>
                   <input type="text" name="storeAddress" id="storeAddress" placeholder="Your Address" required="">
                 </fieldset>
               </div>
@@ -135,7 +127,7 @@ https://templatemo.com/tm-591-villa-agency
                   <button type="button" id="createStoreButton" class="orange-button">가게 등록하기</button>
                 </fieldset>
               </div>
-            </div>
+
           </form>
         </div>
       </div>
