✅ 물품, 상점등록, 지도 팝업 수정

--- a/front-end/itemRegistration.html
+++ b/front-end/itemRegistration.html
@@ -101,10 +101,10 @@ https://templatemo.com/tm-591-villa-agency
               <div class="col-lg-12">
                 <fieldset style="display: flex; justify-content: space-between;">
                   <label for="imageUpload">물품 이미지</label>
-                  <div class="row">
-                  <button type="button" id="uploadButton">이미지 첨부하기</button>
-                  <button type="button" id="cameraButton">촬영하기</button>
-                  </div>
+                  <fieldset>
+                  <button type="button" id="uploadButton">이미지 첨부</button>
+                  <button type="button" id="cameraButton">이미지 촬영</button>
+                  </fieldset>
                   <input type="file" name="image" id="imageUpload" accept="image/*" style="display: none;" >
                 </fieldset>
                 <img id="imagePreview" src="https://img.icons8.com/pastel-glyph/2x/image-file.png" alt="Image preview..." style="width: 100%; height: auto;">
