--- a/front-end/itemRegistration.html
+++ b/front-end/itemRegistration.html
@@ -58,11 +58,12 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="map.html">지도</a></li>
-                      <li><a href="properties.html">가게 물품 관리</a></li>
+                      <li id="storeRegisterItem"><a href="storeResister.html">가게등록</a></li> <!-- id 추가 -->
+                      <li id="storeManageItem"><a href="store_management.html">가게 물품 관리</a></li> <!-- id 추가 -->
                       <li id="loginMenuItem">
-                        <a href="#" id="loginMenu">로그인</a>
-                        <div class="dropdown-content" id="dropdownContent">
-                            <a href="#" id="logoutAction">로그아웃</a>
+                          <a href="#" id="loginMenu">로그인</a>
+                          <div class="dropdown-content" id="dropdownContent">
+                              <a href="#" id="logoutAction">로그아웃</a>
                         </div>
                     </li>
                     
