saller 로그인에 따른 페이지 처리와 최종점검

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -84,6 +84,7 @@ https://templatemo.com/tm-591-villa-agency
                       <li id="loginMenuItem">
                           <a href="#" id="loginMenu">로그인</a>
                           <div class="dropdown-content" id="dropdownContent">
+                            <a href="#" id="storeIFO">가게정보</a>
                               <a href="#" id="logoutAction">로그아웃</a>
                         </div>
                     </li>
