--- a/front-end/resister_goods.html
+++ b/front-end/resister_goods.html
@@ -61,15 +61,16 @@ https://templatemo.com/tm-591-villa-agency
                       <li id="storeRegisterItem"><a href="storeResister.html">가게등록</a></li> <!-- id 추가 -->
                       <li id="storeManageItem"><a href="store_management.html">가게 물품 관리</a></li> <!-- id 추가 -->
                       <li id="loginMenuItem">
-                        <a href="#" id="loginMenu">로그인</a>
-                        <div class="dropdown-content" id="dropdownContent">
-                            <a href="#" id="logoutAction">로그아웃</a>
+                          <a href="#" id="loginMenu">로그인</a>
+                          <div class="dropdown-content" id="dropdownContent">
+                            <a href="#" id="storeIFO">가게정보</a>
+                              <a href="#" id="logoutAction">로그아웃</a>
                         </div>
                     </li>
                     
-                      <li id="registeredItem"><a href="resister_goods.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
+                    <li id="registeredItem"><a href="resister_goods.html"><i class="fa fa-calendar"></i> 등록한 물품</a></li>
 
-                  </ul>    
+                  </ul>     
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
